Fix usage of QrCodeComponent in room share menu
Currently, the QR code is cut and blurry.

--- a/src/app/standalone/share-room/share-room.component.scss
+++ b/src/app/standalone/share-room/share-room.component.scss
@@ -6,5 +6,5 @@
 
 .qr {
   pointer-events: none;
-  height: 80px;
+  height: 99px;
 }
